[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "python3-commons"
dynamic = ["version"]
description = "Re-usable Python3 code"
authors = [
    { name = "Oleg Korsak", email = "kamikaze.is.waiting.you@gmail.com" }
]
license = "GPL-3.0"
readme = { file = "README.rst", content-type = "text/x-rst" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
keywords = []
requires-python = ">=3.14.0,<3.15.0"
dependencies = [
    "msgpack~=1.1.2",
    "msgspec==0.21.1",
    "pydantic-settings~=2.14.0"
]

[project.optional-dependencies]
all = [
    "python3_commons[api-client,audit,authn,authz,cache,database,object-storage,soap-client]"
]
api-client = [
    "aiohttp[speedups]>=3.13.5,<3.15.0",
    "certifi==2026.4.22",
    "python3_commons[object-storage]"
]
audit = [
    "lxml~=6.1.0",
    "zeep[async]~=4.3.2",
    "python3_commons[object-storage]"
]
authn = [
    "aiohttp[speedups]>=3.13.5,<3.15.0",
    "certifi==2026.4.22",
    "python3_commons[api-client]"
]
authz = [
    "python3_commons[database]",
    "python3_commons[api-client]"
]
cache = [
    "valkey[libvalkey]~=6.1.1"
]
database = [
    "asyncpg~=0.31.0",
    "SQLAlchemy[asyncio]~=2.0.49"
]
object-storage = [
    "aiobotocore~=3.6.0",
    "object-storage-client==0.0.26"
]
soap-client = [
    "aiohttp[speedups]>=3.13.5,<3.15.0",
    "certifi==2026.4.22",
    "lxml~=6.1.0",
    "requests~=2.33.1",
    "zeep[async]~=4.3.2",
]


[dependency-groups]
dev = [
    "build",
    "pip",
    "pre-commit",
    "setuptools",
    "setuptools_scm",
    "types-aiobotocore[s3]",
    "wheel",
]
testing = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
]

[project.urls]
Homepage = "https://github.com/kamikaze/python3-commons"
Documentation = "https://github.com/kamikaze/python3-commons/wiki"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.setuptools_scm]

[tool.bdist_wheel]
universal = true

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py314"

[tool.ruff.analyze]
detect-string-imports = true

[tool.ruff.lint]
select = [
    "FAST",
    "YTT",
    #    "ANN",
    "I",
    "E",
    "W",
    "PYI",
    "A",
    #    "ARG",
    "ASYNC",
    "B",
    "C4",
    #    "DTZ",
    "EM",
    "EXE",
    "F",
    "FA",
    "FBT",
    "FLY",
    "FURB",
    "G",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PERF",
    "PIE",
    "PLC",
    "PLE",
    #    "PLR",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T20",
    "TC",
    "TID",
    "TRY",
    "UP",
]
ignore = [
    "ASYNC109",
    "TC003", # msgspec
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["DTZ", "S101"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.format]
exclude = ["*.pyi"]
indent-style = "space"
quote-style = "single"

[tool.pyright]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
reportMatchNotExhaustive = "error"
reportUnnecessaryComparison = "error"

[tool.ty.rules]
unknown-argument = "ignore"  # false positives for Pydantic model fields

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov python3_commons --cov-fail-under=15 --cov-report term-missing --verbose"
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]
